--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,45 +1,20 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
+name:
 
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
- 
-
-#Change the name to match your course name
-
-#Example name: Deploy HTML Files to AppService - COURSENAME
-
-name: Deploy HTML Files to AppService - CMST385
+Deploy HTML Files to AppService - CMST385
 
 on:
+    push: 
+    branches: 
+        - main
 
-  push:
-
-    branches:
-
-      - main
-
-jobs:
-
-  build-and-deploy:
-
-    runs-on: windows-latest
-
-    steps:
-
-    - uses: actions/checkout@main
-
-    - name: Deploy to Azure Web App
-
-      uses: azure/webapps-deploy@v1
-
-      with:
-
-      #Change the app-name to match what was provided to you in the publish settings file, this is in a naming convention of 'COURSENAME-STUDENTUID'
-
-        app-name: 'cmst385-karevalo1'
-
-        slot-name: 'production'
-
-      #Change the publish profile to match what you named your secret setup in GitHub, Example shown below
-
-        publish-profile: ${{ secrets.AppServiceCMST385 }}
+jobs: 
+    build-and-deploy: 
+         runs-on: windows-latest 
+         steps: 
+             - uses: actions/checkout@main 
+             - name: Deploy to Azure Web App 
+             uses: azure/webapps-deploy@v1 
+             with: 
+                app-name: cmst385-karevalo1
+                slot-name: production
+                publish-profile: ${{secrets.AppServiceCMST385}}
